--- a/mvc-jpa-relaciones/src/main/resources/templates/index.html
+++ b/mvc-jpa-relaciones/src/main/resources/templates/index.html
@@ -32,7 +32,7 @@
 		<input type="text" placeholder="Nombre" th:field="${usuario.nombreCompleto}"/><br/>
 		
 		<label th:text="Rol"></label><br/>
-		<select th:field="${usuario.roles}" multiple="multiple">
+		<select th:field="${usuario.roles}" multiple="multiple"> <!-- roles viene de Usuariocontroller -->
 			<option th:each="rol :${roles}" th:value="${rol.id}" th:text="${rol.descripcion}">
 			</option>
 		</select><br/>
@@ -41,12 +41,28 @@
 		<input type="date" th:field="${usuario.fechaNacimiento}" />
 		</div><br/>
 		
-		
+		<span>Configuracion</span>
+		<div style="border: 1px solid black; padding:20px;">
+			<input type="checkbox" th:field="${usuario.configuracion.activo}" th:checked="${usuario.configuracion.activo}?'Checked'"/>Estado Activo<br/>
+			
+			<label th:text="Idioma"></label><br/>
+			<select th:field="${usuario.configuracion.idioma}" >
+				<option th:value="1" th:text="Espanol"/>
+				<option th:value="2" th:text="Ingles"/>
+			</select>
+			
+			<label th:text="Pais"></label><br/>
+			<input type="radio" th:field="${usuario.configuracion.pais}" th:value="1" />
+			<label th:for="${usuario.configuracion.pais}" th:text="'Colombia'"></label><br/>
+	        <input type="radio" th:field="${usuario.configuracion.pais}" th:value="2"/>
+			<label th:for="${usuario.configuracion.pais}" th:text="'Estados Unidos'"></label><br/>
+			
+		</div>
 		
 				
 		<input type="Submit" th:value="${usuario.id != null }?'Guardar Usuario':'Crear Usuario'" th:class="button"/>
 		<th:block th:if="${usuario.id !=null}">
-			<a th:href="@{/index}">Cancel</a>	
+			<a th:href="@{/}">Cancel</a>	
 		</th:block>
 	</form>
 
